# mysterious-bot-x-project-

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  WORKFLOW.md  main.py  mbx_main.py  panel.py  pyproject.toml  requirements.txt  run_test.py  start.py  start.sh
.claude/memory/: autonomous-pr-workflow.md  deploy-and-staging-setup.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
cogs/: admin.py  analytics.py  automod.py  case_panel.py  cases.py  config.py  derole.py  event_leaderboard.py  events.py  history.py  moderation.py  modmail.py  registry.py  roles.py  shared.py  system.py  testkit.py
core/: bot.py  constants.py  context.py  data.py  project_stats.py  services.py  utils.py
mysterious-bot-x-main/modules/: automod.py  logging.py  moderation.py  modmail.py  permissions.py  roles.py  system.py
mysterious-bot-x-main/modules/commands/: analytics.py  automod.py  config.py  system.py
mysterious-bot-x-main/tests/: test_bootstrap.py  test_data.py  test_mbx_legacy.py  test_services.py  test_utils.py
mysterious-bot-x-main/ui/: automod.py  config.py  moderation.py  modmail.py  roles.py  shared.py
tests/: test_autosync.py  test_bootstrap.py  test_commands.py  test_project_stats.py
